Update for class 9/23.

--- a/ebook/06_fork_join.ipynb
+++ b/ebook/06_fork_join.ipynb
@@ -5769,7 +5769,7 @@
     "    total = 0\n",
     "    # This code has a race condition on total\n",
     "    # since multiple threads read and write the same value\n",
-    "    parallel_for (0, len(A), lambda i : total += total[i])\n",
+    "    parallel_for (0, len(A), lambda i : total += A[i])\n",
     "    return total\n",
     "```\n",
     "\n",
@@ -5892,7 +5892,7 @@
     "### Reducers using Cilk\n",
     "\n",
     "```c++\n",
-    "void identity(void *view) { *(int *)view = 0.0; }\n",
+    "void identity(void *view) { *(int *)view = 0; }\n",
     "void combine(void *left, void *right) { *(int *)left += *(int *)right; }\n",
     "\n",
     "int sum(int* A, int n) {\n",
@@ -5905,7 +5905,7 @@
     "\n",
     "you can also use the build in reducers by declaring them like\n",
     "\n",
-    "`cilk::opadd_reducer<int> reducer = 0.0;`\n",
+    "`cilk::opadd_reducer<int> reducer = 0;`\n",
     "\n",
     "One benefit of cilk code is that it has serial semantics (serial equivalence), that means if you just delete every cilk keyword (or use `#define` to remove them) the code should be a correct standard serial c++ program with the same behavior \n",
     "\n"
