Update activity2.ipynb with two fixes 1) Remove unsafe sharing and replace wiht sharing. 2) sharing happens in token_counts array (and NOT tokens array)

--- a/ebook/activities/activity2.ipynb
+++ b/ebook/activities/activity2.ipynb
@@ -84,10 +84,10 @@
     "2. Of the functions `omp_countTokensElementsFirst` and `omp_countTokensTokensFirst`:\n",
     "\n",
     "\n",
-    "    a. Which function performs <b><i>unsafe sharing</i></b> in the `tokens` array?\n",
+    "    a. Which function performs <b><i>sharing</i></b> in the `tokens` array?\n",
     "\n",
     "\n",
-    "    b. Which function assigns different elements of the `tokens` array to different threads?\n",
+    "    b. Which function assigns different elements of the `token_counts` array to different threads?\n",
     "\n",
     "    \n",
     "3. For the function that assigns different tokens to different threads, how does <b><i>false sharing</b></i> arise? Be specific about the memory access pattern or include a drawing/schema.\n",
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
