--- a/ebook/08_javathreads.ipynb
+++ b/ebook/08_javathreads.ipynb
@@ -37,8 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -46,14 +47,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7: Running thread\n",
-      "2: Running thread\n",
       "1: Running thread\n",
-      "8: Running thread\n",
       "3: Running thread\n",
+      "2: Running thread\n",
       "4: Running thread\n",
       "5: Running thread\n",
       "6: Running thread\n",
+      "7: Running thread\n",
+      "8: Running thread\n",
       "\n"
      ]
     }
@@ -294,9 +295,7 @@
     "  * variable that are declared `static` are explicitly shared and access must be protected\n",
     "  * object variables are thread private\n",
     "  \n",
-    "When we compare with Cilk and OpenMP we relied on the parallel block construct for this scoping boundary.  Anything declared inside the parallel-block or parallel for loop are thread private.  Anything declared outside is shared. Object orientation makes it much clearer.\n",
-    "\n",
-    "There are naming conventions that __some__ people use to specifically indicate scoping, e.g. https://en.wikipedia.org/wiki/Hungarian_notation.  This is not widely accepted practice (including not by me).  I point it out for reference."
+    "When we compare with Cilk and OpenMP we relied on the parallel block construct for this scoping boundary.  Anything declared inside the parallel-block or parallel for loop are thread private.  Anything declared outside is shared. Object orientation makes it much clearer."
    ]
   },
   {
