--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -40,7 +40,7 @@
     "* Multicore\n",
     "    * Shared-memory\n",
     "\n",
-    "#### [Memory Hierarchy](05_cache_hierarchy.ipynb) (Sep 16)\n",
+    "#### [Memory Hierarchy](05_memory_access.ipynb) (Sep 16)\n",
     "* Latencies\n",
     "* Cache coherency\n",
     "* Row versus column order\n",
@@ -55,7 +55,7 @@
     "* **Read**: Work and Span https://en.wikipedia.org/wiki/Analysis_of_parallel_algorithms\n",
     "* *Note*: Recorded lecture is incomplete. Missing first 10 minutes. Sorry.\n",
     "\n",
-    "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 23)\n",
+    "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 23 and Sep. 25)\n",
     "\n",
     "* Scoping and thread local variables\n",
     "* Loop dependencies\n",
@@ -63,47 +63,36 @@
     "* Loop fission\n",
     "* Reductions in OpenMP\n",
     "\n",
-    "#### [CPU Parallelism: ILP](08_ILP.ipynb) (Sep 25)\n",
+    "#### [Java Thread Programming](08_javathreads.ipynb) (Sep. 30)\n",
+    "  * fork/join in java\n",
+    "  * Thread classes and Runnable interfaces\n",
+    "\n",
+    "#### [Java Synchronization and Thread Safety](09_synchronized.ipynb) (Oct. 2)\n",
+    "* fork/join in java\n",
+    "* Thread classes and Runnable interfaces\n",
+    "* [Example: Synchronization in Java](examples/08_ex_javasycnh.ipynb)\n",
+    "\n",
+    "\n",
+    "#### [CPU Parallelism: ILP](10_ILP.ipynb) (Oct. 7)\n",
     "* ILP\n",
     "    * Pipelines \n",
     "    * Vectorization\n",
     "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
     " \n",
-    "#### [Example: Numba Jit Compilation](examples/ex_jit.ipynb) (Sep. 25)\n",
+    "#### [Example: Numba Jit Compilation](examples/ex_jit.ipynb) (Oct. 7)\n",
     "* **Read**:\n",
     "    * https://numba.pydata.org/\n",
     "    * https://numba.readthedocs.io/en/stable/user/5minguide.html\n",
     "* [Solutions](solutions/ex_jit_soln.ipynb)\n",
     "\n",
-    "#### [Factors Against Parallelism](09_factors.ipynb) (Sep. 30)\n",
-    "* Interference\n",
-    "* Skew\n",
-    "* Startup costs\n",
-    "* Overlap\n",
+    "#### [Roofline Performance Model](11_roofline.ipynb) (Oct. 9)\n",
+    "* I/O intensity\n",
+    "* Off-chip bandwidth\n",
+    "* I/O and compute limited kernels\n",
+    "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
     "\n",
-    "#### [Processes and Threads](10_processthread.ipynb) (Sep. 30)\n",
-    "* OS processes\n",
-    "* OS threads\n",
-    "* virtual memory\n",
     "\n",
-    "#### [Vector Programming](11_vectorization.ipynb) (Oct. 2)\n",
-    "* vector processing\n",
-    "* assemmbly code (overview)\n",
-    "* vector registers\n",
-    "* programming with intrinsics\n",
-    "* (see examples on godbolt linked in notebooks)\n",
-    "\n",
-    "#### [Java Thread Programming](12_javathreads.ipynb) (Oct. 7)\n",
-    "  * fork/join in java\n",
-    "  * Thread classes and Runnable interfaces\n",
-    "\n",
-    "#### [Java Synchronization and Thread Safety](13_synchronization.ipynb) (Oct. 9)\n",
-    "* fork/join in java\n",
-    "* Thread classes and Runnable interfaces\n",
-    "* [Example: Synchronization in Java](examples/13_ex_javasycnh.ipynb)\n",
-    "    * [Solution: Syncrhonization in Java](examples/solutions/13_ex_javasynch.ipynb)\n",
-    "    \n",
-    "#### [Mutual Exclusion](14_mutex.ipynb) (Oct. 14)\n",
+    "#### [Mutual Exclusion](12_mutex.ipynb) (Oct. 14)\n",
     "* Peterson's algorithm\n",
     "* Bakery algorithm\n",
     "* Fast Mutual Exclusion\n",
@@ -114,12 +103,12 @@
     "* [Example: Fast Mutex in Java](examples/14_ex_fastmutex.ipynb)\n",
     "  * [Solution: Fast Mutex in Java](examples/solutions/14_ex_fastmutex_soln.ipynb)\n",
     " \n",
-    "\n",
-    "#### [Roofline Performance Model](15_roofline.ipynb) (Oct. 16)\n",
-    "* I/O intensity\n",
-    "* Off-chip bandwidth\n",
-    "* I/O and compute limited kernels\n",
-    "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
+    "      \n",
+    "#### [Factors Against Parallelism](13_factors.ipynb) (Oct. 16)\n",
+    "* Interference\n",
+    "* Skew\n",
+    "* Startup costs\n",
+    "* Overlap\n",
     " \n",
     "#### Midterm (Oct. 21)\n"
    ]
