Reorg for mutex lecture.

--- a/ebook/examples/08_ex_java_synch.ipynb
+++ b/ebook/examples/08_ex_java_synch.ipynb
@@ -106,9 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shared variable = 12910391\n",
+      "Shared volatile variable = 10296640\n"
+     ]
+    }
+   ],
    "source": [
     "class VolatileWorks implements Runnable\n",
     "{\n",
@@ -121,8 +130,8 @@
     "  {\n",
     "    for ( int i=0; i<10000000; i++ )\n",
     "    {\n",
-    "      sharedvolvar++;\n",
-    "      sharedvar++;\n",
+    "        sharedvolvar++;\n",
+    "        sharedvar++;  \n",
     "    }\n",
     "  }\n",
     "}\n",
@@ -174,9 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shared variable = 26944390\n",
+      "Shared atomic variable = 40000000\n"
+     ]
+    }
+   ],
    "source": [
     "import java.util.concurrent.atomic.AtomicInteger;\n",
     "\n",
