--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -72,26 +72,6 @@
     "* Thread classes and Runnable interfaces\n",
     "* [Example: Synchronization in Java](examples/08_ex_javasycnh.ipynb)\n",
     "\n",
-    "\n",
-    "#### [CPU Parallelism: ILP](10_ILP.ipynb) (Oct. 7)\n",
-    "* ILP\n",
-    "    * Pipelines \n",
-    "    * Vectorization\n",
-    "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
-    " \n",
-    "#### [Example: Numba Jit Compilation](examples/ex_jit.ipynb) (Oct. 7)\n",
-    "* **Read**:\n",
-    "    * https://numba.pydata.org/\n",
-    "    * https://numba.readthedocs.io/en/stable/user/5minguide.html\n",
-    "* [Solutions](solutions/ex_jit_soln.ipynb)\n",
-    "\n",
-    "#### [Roofline Performance Model](11_roofline.ipynb) (Oct. 9)\n",
-    "* I/O intensity\n",
-    "* Off-chip bandwidth\n",
-    "* I/O and compute limited kernels\n",
-    "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
-    "\n",
-    "\n",
     "#### [Mutual Exclusion](12_mutex.ipynb) (Oct. 14)\n",
     "* Peterson's algorithm\n",
     "* Bakery algorithm\n",
@@ -103,6 +83,24 @@
     "* [Example: Fast Mutex in Java](examples/14_ex_fastmutex.ipynb)\n",
     "  * [Solution: Fast Mutex in Java](examples/solutions/14_ex_fastmutex_soln.ipynb)\n",
     " \n",
+    "#### [Roofline Performance Model](11_roofline.ipynb) (Oct. 9)\n",
+    "* I/O intensity\n",
+    "* Off-chip bandwidth\n",
+    "* I/O and compute limited kernels\n",
+    "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
+    "\n",
+    "#### [CPU Parallelism: ILP](12_ILP.ipynb) (Oct. 7)\n",
+    "* ILP\n",
+    "    * Pipelines \n",
+    "    * Vectorization\n",
+    "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
+    " \n",
+    "#### [Example: Numba Jit Compilation](examples/ex_jit.ipynb) (Oct. 7)\n",
+    "* **Read**:\n",
+    "    * https://numba.pydata.org/\n",
+    "    * https://numba.readthedocs.io/en/stable/user/5minguide.html\n",
+    "* [Solutions](solutions/ex_jit_soln.ipynb)\n",
+    "\n",
     "      \n",
     "#### [Factors Against Parallelism](13_factors.ipynb) (Oct. 16)\n",
     "* Interference\n",
@@ -125,7 +123,8 @@
     "* Row/Column example: [row_column.c](./examples/openmp/row_column.c)\n",
     "* False sharing example: [sharing.c](./examples/openmp/sharing.c)\n",
     "* Fast matrix multiplication example: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
-    "* Cilk: examples Integral and Matrix Multiplication on [http://preview.speedcode.org/](http://preview.speedcode.org/)"
+    "* Cilk: examples Integral and Matrix Multiplication on [http://preview.speedcode.org/](http://preview.speedcode.org/)\n",
+    "* [Fast mutual exclusion example](examples/10_ex_fastmutex.ipynb)"
    ]
   },
   {
