--- a/ebook/10_mutex.ipynb
+++ b/ebook/10_mutex.ipynb
@@ -13,13 +13,13 @@
     "  * An action by one process may enable another action by another process\n",
     "  * In such cases, processes should coordinate their actions\n",
     "  \n",
-    "Review section 1.2 in Herlihy that describes a protocol based on   The key comment here is:\n",
+    "Review section 1.2 in Herlihy that describes a protocol based on cans and strings and flags. The key comment here is:\n",
     "\n",
     ">  It is important to note that  we never assumed that “raising my flag” or the “looking at your flag” happens instantaneously, nor did we make any assumptions about how long such activities take. All we care about is when these activities start or end.\n",
     "\n",
     "So, the protocol is asynchronous and not time dependent. This is an important feature.\n",
     "\n",
-    "Synchronization issues are the major bug in parallel programs\n",
+    "Synchronization issues are the major bug in parallel programs:\n",
     "* Deadlock: when a program cannot progress because all of it's threads/processes are waiting on resources.\n",
     "* Incorrect results: from uncontrolled sharing (race conditions) on data.\n",
     "\n",
@@ -95,7 +95,7 @@
     "With long waits and high contention, spinning wastes an arbitrary amount of cycles and __power__.  Spinning is a major cause of power consumption in poorly written mobile apps. \n",
     "\n",
     "The alternative to spinning is to sleep/restart waiting processes.  This has more overhead to start/stop, but frees processors to do other tasks.\n",
-    "* This is the wait/notify pattern that we will implement in Activity 4.\n",
+    "* This is the wait/notify pattern that we will implement in Activity 3.\n",
     "\n"
    ]
   },
