--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -81,6 +81,7 @@
     "  * Chapter 2: 2.1-2.6\n",
     "  * Chapter 7: 7.1-7.3.\n",
     "* [Example: Fast Mutex in Java](examples/14_ex_fastmutex.ipynb)\n",
+    "  * Please **COMPLETE** the exercise in the example. Then look at the solutions.\n",
     "  * [Solution: Fast Mutex in Java](examples/solutions/14_ex_fastmutex_soln.ipynb)\n",
     " \n",
     "#### [Roofline Performance Model](11_roofline.ipynb) (Oct. 9)\n",
