--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -71,8 +71,9 @@
     "* fork/join in java\n",
     "* Thread classes and Runnable interfaces\n",
     "* [Example: Synchronization in Java](examples/08_ex_javasycnh.ipynb)\n",
+    "* **COMPLETE** the example exercise. \n",
     "\n",
-    "#### [Mutual Exclusion](12_mutex.ipynb) (Oct. 14)\n",
+    "#### [Mutual Exclusion](12_mutex.ipynb) (Oct. 7)\n",
     "* Peterson's algorithm\n",
     "* Bakery algorithm\n",
     "* Fast Mutual Exclusion\n",
@@ -90,11 +91,15 @@
     "* I/O and compute limited kernels\n",
     "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
     "\n",
-    "#### [CPU Parallelism: ILP](12_ILP.ipynb) (Oct. 7)\n",
+    "#### [CPU Parallelism: ILP](12_ILP.ipynb) (Oct. 14)\n",
     "* ILP\n",
     "    * Pipelines \n",
     "    * Vectorization\n",
     "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
+    " \n",
+    "## MIDTERM (October 21) material ends here!\n",
+    "\n",
+    "All topics prior to Oct. 14 will covered on the midterm.\n",
     " \n",
     "#### [Example: Numba Jit Compilation](examples/ex_jit.ipynb) (Oct. 7)\n",
     "* **Read**:\n",
@@ -125,7 +130,8 @@
     "* False sharing example: [sharing.c](./examples/openmp/sharing.c)\n",
     "* Fast matrix multiplication example: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
     "* Cilk: examples Integral and Matrix Multiplication on [http://preview.speedcode.org/](http://preview.speedcode.org/)\n",
-    "* [Fast mutual exclusion example](examples/10_ex_fastmutex.ipynb)"
+    "* [Fast mutual exclusion example](examples/10_ex_fastmutex.ipynb)\n",
+    "* Roofline paper Figure 3. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq)"
    ]
   },
   {
