--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -91,11 +91,10 @@
     "* I/O and compute limited kernels\n",
     "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009.\n",
     "\n",
-    "#### [CPU Parallelism: ILP](12_ILP.ipynb) (Oct. 14)\n",
-    "* ILP\n",
-    "    * Pipelines \n",
-    "    * Vectorization\n",
-    "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
+    "#### [Instruction Level Parallelism](12_ILP.ipynb) (Oct. 14)\n",
+    "* Pipelines \n",
+    "* Vectorization\n",
+    "* Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
     " \n",
     "## MIDTERM (October 21) material ends here!\n",
     "\n",
