--- a/ebook/12_ILP.ipynb
+++ b/ebook/12_ILP.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "faaefe4f-645a-46d3-89f8-93dba9cf3d7a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Instruction-Level Parallelism and Vectorization\n",
     "\n",
