--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -118,6 +118,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17e34d37-3bf2-4f69-919c-f21a63a9d745",
+   "metadata": {},
+   "source": [
+    "#### [Dask Arrays](15_dask_arrays.ipynb) (Oct. 30)\n",
+    "  * Data parallel and declarative programming. \n",
+    "  * Execution graphs \n",
+    "  * Lazy evaluation\n",
+    "  \n",
+    "#### [Dask Dataframes](16_dask_dataframes.ipynb) (Nov. 4)\n",
+    "  * Parallel pandas\n",
+    "  * Slicing and aggregation\n",
+    "  * Indexing\n",
+    "    \n",
+    "#### [Hadoop Systems and Semantics](17_hadoop.ipynb) (November 6)\n",
+    "  * [Friend of Friends programming example](examples/18_ex_FoF.ipynb)\n",
+    "\n",
+    "#### [Introduction to Spark](19_spark.ipynb) (Nov. 11)\n",
+    "  * Resilient Distributed Datasets\n",
+    "  * Caching\n",
+    "  * M/R equivalence\n",
+    "  * Checkpointing\n",
+    "  * __Reading__: [Zaharia et al. Resilient Distributed Datasets: A Fault-Tolerant Abstraction for In-Memory Cluster Computing, NSDI, 2012](https://www.usenix.org/system/files/conference/nsdi12/nsdi12-final138.pdf)\n",
+    "  \n",
+    "#### [Spark Programming](examples/22_FoF_Spark.ipynb) (Nov. 13)\n",
+    "  * Spark join\n",
+    "  * Using memory\n",
+    "  \n",
+    "#### [Ray](23_Ray.ipynb) (Nov. 18)\n",
+    "* Remote functions\n",
+    "* Distributed objects\n",
+    "* Distributed memory management\n",
+    "* **Reading:** [P. Moritz et al. Ray: A Distributed Framework for Emerging AI Applications. OSDI, 2018.](https://arxiv.org/pdf/1712.05889.pdf)\n",
+    "\n",
+    "#### [Ray Actors](24_Ray.ipynb) (Nov. 20)\n",
+    "  * Bulk synchronous parallel\n",
+    "  * barrier synchronization\n",
+    "  * stateful distributed objects \n",
+    "  * service centers\n",
+    "  * ray.get() as a synchronization primitive.\n",
+    "\n",
+    "#### No Class: Holiday (Nov. 25 and 27)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f082fd58-5db6-4f69-9a63-20a165c3f5b1",
    "metadata": {},
    "source": [
