--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -163,6 +163,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f528e2f-bcdb-4f7c-b06d-6e4853a4cc38",
+   "metadata": {},
+   "source": [
+    "#### MPI (Dec. 2): Recorded lecture\n",
+    "  * No class.\n",
+    "\n",
+    "#### All Reduce (Dec. 4)\n",
+    "\n",
+    "#### TBD (Dec. 4)\n",
+    "\n",
+    "#### Final Exam (Dec. 12)\n",
+    "  * In class (Hodson 11) 9-12am "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f082fd58-5db6-4f69-9a63-20a165c3f5b1",
    "metadata": {},
    "source": [
