--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -166,10 +166,10 @@
    "id": "1f528e2f-bcdb-4f7c-b06d-6e4853a4cc38",
    "metadata": {},
    "source": [
-    "#### MPI (Dec. 2): Recorded lecture\n",
-    "  * No class.\n",
+    "#### [MPI](23_MPI.ipynb) (Dec. 4)\n",
     "\n",
-    "#### All Reduce (Dec. 4)\n",
+    "#### [All Reduce](24_collective.ipynb) (Dec. 4)\n",
+    "* **Reading** [https://developer.nvidia.com/blog/massively-scale-deep-learning-training-nccl-2-4/](https://developer.nvidia.com/blog/massively-scale-deep-learning-training-nccl-2-4/)\n",
     "\n",
     "#### Final Exam (Dec. 12)\n",
     "  * In class (Hodson 11) 9-12am "
